Style scrollbar and small fixes

--- a/src/App.css
+++ b/src/App.css
@@ -9,3 +9,19 @@
   height: 100vh;
   margin: 0 auto;
 }
+
+.scroll-bar::-webkit-scrollbar-track {
+  -webkit-box-shadow: inset 0 0 6px #c0a8c9;
+  background-color: #f8f0fc;
+  border-radius: 20px;
+}
+
+.scroll-bar::-webkit-scrollbar {
+  width: 8px;
+  background-color: #f5f5f5;
+}
+
+.scroll-bar::-webkit-scrollbar-thumb {
+  background-color: #488d8d;
+  border-radius: 20px;
+}
